Fixed package.json. Added changelog and readme.

--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "grid-deluxe",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A CSS flex grid with more than just columns and rows.",
-  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:cleversprocket/grid-deluxe.git"
+  },
   "scripts": {
     "build": "gulp",
     "clean": "gulp clean",
@@ -10,7 +13,8 @@
   },
   "keywords": [
     "CSS",
-    "grid"
+    "grid",
+    "flex"
   ],
   "author": "Matt Morrow <matt@cleversprocket.com>",
   "license": "ISC",
